adding assets and colors

--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@ The goal of this site is to make our design guidelines easy to access by all tea
 
 <h2 id="add-or-edit-documentation">What About this</h2>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce facilisis efficitur magna. Maecenas pulvinar, est ut dictum porta, metus lacus mattis dui, eu tristique dui nunc ut nulla. Mauris dictum sed ipsum ut cursus. Nullam condimentum magna nunc, blandit euismod est tempus nec. Nulla vitae augue eu diam pharetra venenatis. Vivamus placerat id justo nec condimentum. Mauris quis gravida est. Ut a elit et est feugiat iaculis.</p>
-
-<p>Mauris dignissim tristique ultrices. Donec sapien urna, vehicula et tellus ac, mollis tincidunt odio. Vestibulum ut ligula eu enim iaculis semper. Sed porta dolor ac tempor pellentesque. Pellentesque sed lacus eu ipsum euismod malesuada. Duis est dui, sagittis vel porttitor eleifend, elementum et dolor. Morbi auctor venenatis scelerisque. Nulla facilisi.</p>
-
-<p>Sed posuere magna eget aliquet molestie. Cras lorem orci, euismod et euismod eu, mollis ut odio. Pellentesque viverra id eros sit amet porta. Donec nec vehicula quam, et pharetra sapien. Curabitur ornare mi orci. Fusce eu libero commodo, facilisis mi quis, fringilla sem. Cras augue velit, rutrum id imperdiet auctor, faucibus non dolor. Donec odio magna, dictum vel lacus in, porta dignissim leo. Fusce ultrices ex vitae viverra pretium.</p>
+<p>At every company having a unique and understandable design system allows for every team to be coherent with what they create, a brand should be perceived as an unified entity that moves in unisonous, that’s why every color, every font, every size should be design with the brand in mind; that creates a profesional comunication with the end user and keeps the brand with a solid nucleus.</p>
 
       </main>
       </div>
