--- a/typography.html
+++ b/typography.html
@@ -14,7 +14,7 @@
         <main class="guide-content">
           <h1 id="typography">Typography</h1>
           <ul class="font-container">
-            <p>Text sizes family: TT Norms</p>
+            <p>Text sizes family: Gotham</p>
             <li style="font-size: 12px; line-height: 16px">
               Tiny
               12px/16px
@@ -35,63 +35,36 @@
               Large
               20px/28px
             </li>
-            <li style="font-size: 24px; line-height: 32px">
+            <li style="font-size: 26px; line-height: 32px">
               Huge
-              24px/32px
-            </li>
-            <li style="font-size: 28px; line-height: 32px">
-              HeaderSmall
-              28px/32px
-            </li>
-            <li style="font-size: 32px; line-height: 36px">
-              Header
-              32px/36px
+              26px/32px
             </li>
             <li style="font-size: 36px; line-height: 40px">
-              HeaderLarge
+              Header
               36px/40px
             </li>
           </ul>
+          <p>For a legible font use 16px as the default size.</p>
           <ul class="font-container">
-            <p>Display sizes on mobile family: Circuit</p>
-            <li style="font-family:Circuit;font-size: 22px; line-height: 30px">
+            <p>Bold variations</p>
+            <li style="font-weight:700;font-size: 22px; line-height: 30px">
               DisplayTiny
               22px/30px
             </li>
-            <li style="font-family:Circuit;font-size: 28px; line-height: 32px">
+            <li style="font-weight:700;font-size: 28px; line-height: 32px">
               DisplaySmall
               28px/32px
             </li>            
-            <li style="font-family:Circuit;font-size: 36px; line-height: 40px">
+            <li style="font-weight:700;font-size: 36px; line-height: 40px">
               Display
               36px/40px
             </li>            
-            <li style="font-family:Circuit;font-size: 54px; line-height: 58px">
+            <li style="font-weight:700;font-size: 54px; line-height: 58px">
               DisplayLarge
               54px/58px
             </li>
           </ul>
-
-          <ul class="font-container">
-            <p>Display sizes on desktop family: Circuit</p>
-            <li style="font-family:Circuit;font-size: 28px; line-height: 32px">
-              DisplayTiny
-              28/32px
-            </li>
-            <li style="font-family:Circuit;font-size: 42px; line-height: 44px">
-              DisplaySmall
-              42/44px
-            </li>
-            <li style="font-family:Circuit;font-size: 68px; line-height: 72px">
-              Display
-              68/72px
-            </li>
-            <li style="font-family:Circuit;font-size: 100px; line-height: 108px">
-              DisplayLarge
-              100/108px
-            </li>
-          </ul>
-          <p><a href="https://RoloStudios.box.com/s/0kz2hxuiu6qzaub6dz7lvsvcj8znw9b7">Download font files</a></p>
+          <p><a href="https://rolostudios.box.com/s/0kz2hxuiu6qzaub6dz7lvsvcj8znw9b7">Download font files</a></p>
         </main>
       </div>
       <nav class="guide-navigation">
