--- a/brand.html
+++ b/brand.html
@@ -17,41 +17,28 @@
 <p><img src="assets/img/brandguide.jpg" style="width:100%" /></p>
 
 <h2 id="brand-guidelines">Brand Guidelines</h2>
-<p>RoloStudios is a brand designed to help people discover their potential.</p>
+<p>RoloStudios is a design focused agency. We are a strategic nearshore production partner. We are agile, built to scale and priced to white label. We focus on crafting beautiful digital experiences that grow, engage and convert your audience.</p>
 
-<p>And we express that purpose through optimistic, active visuals. Through modern, vibrant design. And with language that meets people where they are.</p>
+<!-- <p><a href="https://RoloStudios.box.com/s/8qbnn4emhx9qjsqzoqv8jjtlvjvf7n2a">Download brand ethos and guidelines</a></p> -->
 
-<p><a href="https://RoloStudios.box.com/s/8qbnn4emhx9qjsqzoqv8jjtlvjvf7n2a">Download brand ethos and guidelines</a></p>
-
-<p><a href="https://RoloStudios.box.com/s/c3xcbj6c86mrkr6n6wbvcnhwk6k6iucc">Download brand identity guidelines</a></p>
+<!-- <p><a href="https://RoloStudios.box.com/s/c3xcbj6c86mrkr6n6wbvcnhwk6k6iucc">Download brand identity guidelines</a></p> -->
 
 <hr />
 
 <p><img src="assets/img/logolockup.jpg" style="width:100%" /></p>
 
-<h2 id="logo-and-logotype">Logo and Logotype</h2>
+<h2 id="logo-and-logotype">Logo</h2>
 
-<p>Our logo represents what RoloStudios stands for — taking a step into something bigger.</p>
+<p>Our logo represents what RoloStudios stands for - creating slick digital visual experiences. We’ve put the “R” and “S” letters uppercase to later use those as our symbol, we also modified the first and last “o” in the name to show open and close brackets making a subtle reference to coding.</p>
 
-<p>And our logotype is a geometric sans that says what RoloStudios is, using a thinner, lowercase version of our custom typeface.</p>
-
-<p>Despite that typeface, we’re still RoloStudios — capital ‘C’ and capital ‘P’ —
-when typed out.</p>
-
-<p><a href="https://RoloStudios.box.com/s/8pze544rde187teyv6rq8dr0k1o64z5d">Download logo files</a></p>
+<!-- <p><a href="https://RoloStudios.box.com/s/8pze544rde187teyv6rq8dr0k1o64z5d">Download logo files</a></p> -->
 
 <hr />
 
 <p><img src="assets/img/type.jpg" style="width:100%" /></p>
 
 <h2 id="typography-and-layout">Typography and Layout</h2>
-<p>Our typography reflects the modern urgency of our brand. It aims to hit
-its purpose with a bit of punchy sportiness, and then be on its way.</p>
-
-<p>We approach layout with simple organizing principles—6 and 8 column
-layout grids, plus increments of 4pt on type sizing and leading to streamline
-information and further inform hierarchy. These exact rules can flex, but,
-if they do, there should always be a clear reason why.</p>
+<p>Our tipography reflects a modern aproach for the brand. the round geometry communicates an everlasting evolution, it has to be used for every brand communication so it keeps consistency all across every media.</p>
 
 <p><a href="https://RoloStudios.box.com/s/0kz2hxuiu6qzaub6dz7lvsvcj8znw9b7">Download font files</a></p>
 
@@ -61,20 +48,11 @@ if they do, there should always be a clear reason why.</p>
 
 <h2 id="color">Color</h2>
 
-<p>Color at RoloStudios is like that postclass
-feeling: it’s bright, vibrant,
-optimistic and decidedly brighter.</p>
+<p>Color at RoloStudios is very important to keep the brand's consistency, we use red to reflect our passion and compromise with every project and to keep the human side always present, its warm and affective, it defines us.</p>
 
-<p>Many times, color will come from
-photography and video itself.</p>
+<!-- <p><a href="https://RoloStudios.box.com/s/ql63ul5p411e3b5hzuqqgx4tdy1q3den">Download color guidelines</a></p>
 
-<p>Aside from that, we use colors in UI,
-in graphs and charts and throughout
-illustration.</p>
-
-<p><a href="https://RoloStudios.box.com/s/ql63ul5p411e3b5hzuqqgx4tdy1q3den">Download color guidelines</a></p>
-
-<p><a href="https://RoloStudios.github.io/design-system/color/">See a quick color guide</a></p>
+<p><a href="https://RoloStudios.github.io/design-system/color/">See a quick color guide</a></p> -->
 
 <hr />
 
