adding font files

--- a/brand.html
+++ b/brand.html
@@ -40,7 +40,7 @@
 <h2 id="typography-and-layout">Typography and Layout</h2>
 <p>Our tipography reflects a modern aproach for the brand. the round geometry communicates an everlasting evolution, it has to be used for every brand communication so it keeps consistency all across every media.</p>
 
-<p><a href="https://RoloStudios.box.com/s/0kz2hxuiu6qzaub6dz7lvsvcj8znw9b7">Download font files</a></p>
+<p><a href="fonts/gotham.zip">Download font files</a></p>
 
 <hr />
 
