--- a/color.html
+++ b/color.html
@@ -18,7 +18,7 @@
 
 					<div class="color-group">
 						<div class="color-header color-copy" onclick="copyToClipboard('#fa402e')">
-							<span class="color-name">Brand red</span>
+							<span class="color-name">Rolo red</span>
 							<span class="color-hex">
 								<span class="color-copy">#fa402e</span>
 							</span>
@@ -40,7 +40,7 @@
 					</div>
 					<div class="color-group">
 						<div class="color-header color-copy" onclick="copyToClipboard('#98ddff')">
-							<span class="color-name">Brand blue</span>
+							<span class="color-name">Rolo blue</span>
 							<span class="color-hex">
 								<span class="color-copy">#98ddff</span>
 							</span>
@@ -73,7 +73,7 @@
 					</div>
 					<div class="color-group">
 						<div class="color-header color-copy" onclick="copyToClipboard('#fbfbfa')">
-							<span class="color-name">Fake white</span>
+							<span class="color-name">Off white</span>
 							<span class="color-hex">
 								<span class="color-copy">#fbfbfa</span>
 							</span>
@@ -111,7 +111,7 @@
 					</div>
 					<div class="color-group">
 						<div class="color-header color-copy" onclick="copyToClipboard('#2b2b2b')">
-							<span class="color-name">Fake black</span>
+							<span class="color-name">Off black</span>
 							<span class="color-hex">
 								<span class="color-copy">#2b2b2b</span>
 							</span>
