--- a/typography.html
+++ b/typography.html
@@ -64,7 +64,7 @@
               54px/58px
             </li>
           </ul>
-          <p><a href="https://rolostudios.box.com/s/0kz2hxuiu6qzaub6dz7lvsvcj8znw9b7">Download font files</a></p>
+          <p><a href="fonts/gotham.zip">Download font files</a></p>
         </main>
       </div>
       <nav class="guide-navigation">
