--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 id="get-started">Get started</h1>
 
 <p class="intro-big">
-The goal of this site is to make our design guidelines easy to access by all teams at RoloStudios and to be easily maintained by the UX design team.
+The goal of this site is to make our design guidelines easy to access by all teams at Rolo Studios and to be easily maintained by the design team.
 </p>
 
 <h2 id="add-or-edit-documentation">What About this</h2>
