Adding logo assets
changen zip folder name
adding favicon

--- a/brand.html
+++ b/brand.html
@@ -31,7 +31,7 @@
 
 <p>Our logo represents what RoloStudios stands for - creating slick digital visual experiences. We’ve put the “R” and “S” letters uppercase to later use those as our symbol, we also modified the first and last “o” in the name to show open and close brackets making a subtle reference to coding.</p>
 
-<!-- <p><a href="https://RoloStudios.box.com/s/8pze544rde187teyv6rq8dr0k1o64z5d">Download logo files</a></p> -->
+<p><a href="zip/logo-assets.zip">Download logo files</a></p>
 
 <hr />
 
@@ -40,7 +40,7 @@
 <h2 id="typography-and-layout">Typography and Layout</h2>
 <p>Our tipography reflects a modern aproach for the brand. the round geometry communicates an everlasting evolution, it has to be used for every brand communication so it keeps consistency all across every media.</p>
 
-<p><a href="fonts/gotham.zip">Download font files</a></p>
+<p><a href="zip/gotham.zip">Download font files</a></p>
 
 <hr />
 
