--- a/color.html
+++ b/color.html
@@ -60,7 +60,7 @@
 							</div>
 						</div>
 					</div>
-					<h2 id="neutrals-palette">Neutrals palette</h2>
+					<h2 id="neutrals-palette">Neutral palette</h2>
 					<div class="color-group">
 						<div class="color-header color-copy" onclick="copyToClipboard('#ffffff')">
 							<span class="color-name">White</span>
